force-app/main/default/objects/Account/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Count</label>
    <length>5</length>
    <type>Text</type>
</CustomField>