force-app/main/default/objects/Account/fields/NO_of_policies__c.field-meta.xml
<CustomField>
    <fullName>NO_of_policies__c</fullName>
    <label>NO of policies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>