force-app/main/default/objects/Account/fields/RatingPercent__c.field-meta.xml
<CustomField>
    <fullName>RatingPercent__c</fullName>
    <label>RatingPercent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>