force-app/main/default/objects/Account/recordTypes/library.recordType-meta.xml
<RecordType>
    <fullName>library</fullName>
    <active>true</active>
    <label>library</label>
</RecordType>