force-app/main/default/objects/Account/recordTypes/mark1.recordType-meta.xml
<RecordType>
    <fullName>mark1</fullName>
    <active>true</active>
    <label>mark1</label>
</RecordType>