force-app/main/default/objects/Account/validationRules/test.validationRule-meta.xml
<ValidationRule>
    <fullName>test</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c == 200</errorConditionFormula>
    <errorMessage>Wrong</errorMessage>
</ValidationRule>